@@ -68,6 +68,7 @@ Version 1.4.5 - CVS
     changes.
   - Included local configuration file in config.php generated by
     administrator's plugin.
+  - Fixed checking for quota when appending to Sent folder (#1172694).
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
